# ChatGPTAnalysis

./: Readme.adoc
Analyser/: Analyser.cabal
Analyser/app/: Main.hs
Responses/Prompt-00/00-intelligent/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Responses/Prompt-00/01-unintelligent/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Responses/Prompt-00/02-devious/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Responses/Prompt-00/03-trustworthy/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Responses/Prompt-00/04-peaceful/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Responses/Prompt-00/05-violent/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Responses/Prompt-01/00-intelligent/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Responses/Prompt-01/01-unintelligent/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Responses/Prompt-01/02-devious/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Responses/Prompt-01/03-trustworthy/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Responses/Prompt-01/04-peaceful/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Responses/Prompt-01/05-violent/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Responses/Prompt-02/00-intelligent/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
Responses/Prompt-02/02-devious/: 0.txt  (+9 more)
(+48 files in other folders)
