cabal-version:      2.2
name:               Analyser
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ose Pedro
build-type:         Simple

executable Analyser
    main-is:          Main.hs
    build-depends:    base >= 4.9 && < 4.15,
                      containers >= 0.6 && < 0.7,
                      directory >= 1.3 && < 1.4,
                      filepath >= 1.4 && < 1.5
    hs-source-dirs:   app
    default-language: Haskell2010
